[package]
name = "kanade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.10.0"
rand = "0.8.5"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
